--- a/src/index.css
+++ b/src/index.css
@@ -5,30 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--text-color); /* Use CSS variable for text color */
   text-align: center;
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
 
 .bookmark-card {
-  background-color: rgb(176, 122, 122);
+  background-color: lightsalmon;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   padding: 5px;
   margin-bottom: 20px;
-  width: 500px;
-  margin: 0 auto;
+  width: 400px;
+  margin: 5px auto;
 }
 
 .bookmark-card h2 {
   margin-top: 0;
   margin-bottom: 2px;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .bookmark-card p {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   color: #555;
 }
 
@@ -66,11 +65,24 @@ body {
 }
 
 .bookmark-button {
-  background-color: lightblue;
+  background-color: lightsalmon;
   cursor: pointer;
+
 }
 
 .bookmark-list {
   margin-bottom: 20px;
 }
 
+.form-container input[type="submit"] {
+  background-color: #007bff;
+  color: black;
+  cursor: pointer;
+  width: 150px;
+  height: 30px;
+}
+
+.form-container input[type="input"] {
+  width: 150px;
+  height: 25px;
+}
